style(responsive): fix tags container overflowing

--- a/assets/styles/pages/_project.scss
+++ b/assets/styles/pages/_project.scss
@@ -36,6 +36,7 @@
 		&__tags-container {
 			ul {
 				display: flex;
+				flex-wrap: wrap;
 				gap: 10px;
 			}
 			margin-bottom: 28px;
