--- a/assets/styles/pages/_projects.scss
+++ b/assets/styles/pages/_projects.scss
@@ -27,6 +27,7 @@
 			&__tags-container {
 				ul {
 					display: flex;
+					flex-wrap: wrap;
 					gap: 10px;
 				}
 			}
